Fixing tile overflow again

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,6 +69,7 @@ a:hover {
   padding: 16px;
   margin-bottom: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  overflow:hidden;
 }
 .tile-content{
   font-weight: 300;
